remove white space and fix ddg css

--- a/default-gruvbox/elkowar_gruvbox_ddg.styl
+++ b/default-gruvbox/elkowar_gruvbox_ddg.styl
@@ -10,21 +10,21 @@
     :root {
         --elk-font-family: "Terminus (TTF)";
         --elk-font-size: 14px;
-        
+
         --elk-bg-dark: #1d2021;
         --elk-bg-darkisher: #202020;
         --elk-bg-darkish: #222222;
         --elk-bg-normal: #282828;
         --elk-bg-brighter: #504945;
-        
+
         --elk-border: #353331;
-        
+
         --elk-fg-normal: #ebdbb2;
         --elk-fg-brighter: #fbf1c7;
         --elk-fg-darker: #d5c4a1;
         --elk-fg-dark: #a89984;
         --elk-fg-inactive: #696969;
-        
+
         --elk-red: #fb4934;
         --elk-purple: #b16286;
         --elk-blue: #458588;
@@ -32,7 +32,7 @@
         --elk-aqua: #83c07c;
         --elk-yellow: #fabd2f;
         --elk-orange: #fe8019;
-        
+
         --elk-accent: var(--elk-aqua);
     }
 
@@ -170,7 +170,7 @@
         }
 
         a.result__url > * {
-            color: var(----elk-blue) !important;
+            color: var(--elk-blue) !important;
             font-family: "cozette" !important;
         }
 
@@ -196,7 +196,7 @@
     .msg__all:visited {
         color: var(--elk-fg-normal) !important;
     }
-    
+
     .dropdown.dropdown--region {
         display: none !important;
     }
