--- a/styles/elkowar_gruvbox_ddg.styl
+++ b/styles/elkowar_gruvbox_ddg.styl
@@ -10,21 +10,21 @@
     :root {
         --elk-font-family: ${elk_font_family};
         --elk-font-size: ${elk_font_size};
-        
+
         --elk-bg-dark: ${elk_bg_dark};
         --elk-bg-darkisher: ${elk_bg_darkisher};
         --elk-bg-darkish: ${elk_bg_darkish};
         --elk-bg-normal: ${elk_bg_normal};
         --elk-bg-brighter: ${elk_bg_brighter};
-        
+
         --elk-border: ${elk_border};
-        
+
         --elk-fg-normal: ${elk_fg_normal};
         --elk-fg-brighter: ${elk_fg_brighter};
         --elk-fg-darker: ${elk_fg_darker};
         --elk-fg-dark: ${elk_fg_dark};
         --elk-fg-inactive: ${elk_fg_inactive};
-        
+
         --elk-red: ${elk_red};
         --elk-purple: ${elk_purple};
         --elk-blue: ${elk_blue};
@@ -32,7 +32,7 @@
         --elk-aqua: ${elk_aqua};
         --elk-yellow: ${elk_yellow};
         --elk-orange: ${elk_orange};
-        
+
         --elk-accent: ${elk_accent};
     }
 
@@ -170,7 +170,7 @@
         }
 
         a.result__url > * {
-            color: var(----elk-blue) !important;
+            color: var(--elk-blue) !important;
             font-family: "cozette" !important;
         }
 
@@ -196,7 +196,7 @@
     .msg__all:visited {
         color: var(--elk-fg-normal) !important;
     }
-    
+
     .dropdown.dropdown--region {
         display: none !important;
     }
